[metadata]
name = gpiod
url = https://github.com/hhk7734/python3-gpiod
project_urls =
    Source =

author = Hyeonki Hong
author_email = hhk7734@gmail.com
description =
long-description = file: README.md, CHANGELOG
long_description_content_type = text/markdown
keywords =
license =
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: System :: Hardware

[options]
package_dir =
    = py_src
packages = find:

[options.packages.find]
where = py_src