[metadata]
name = gpiod
url = https://github.com/hhk7734/python3-gpiod
project_urls =
    Documentation = https://wiki.loliot.net/docs/lang/python/libraries/gpiod/python-gpiod-about
    "Source Code" = https://github.com/hhk7734/python3-gpiod

author = Hyeonki Hong
author_email = hhk7734@gmail.com
description =
long-description = file: README.md, CHANGELOG
long_description_content_type = text/markdown
keywords = GPIO, gpiod
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: System :: Hardware

[options]
package_dir =
    = py_src
packages = find:
zip_safe = False

[options.packages.find]
where = py_src
